# claude-remember-me

./: .gitignore  README.md  pyproject.toml
docs/: design.md  plan.md
src/claude_remember_me/: __init__.py  chunker.py  db.py  embedder.py  ingest.py  models.py  ranking.py  search.py  server.py
tests/: conftest.py  test_chunker.py  test_db.py  test_embedder.py  test_ingest.py  test_ingest_async.py  test_search.py  test_server.py
