[project]
name = "claude-remember-me"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "sentence-transformers>=3.0",
    "sqlite-vec>=0.1.6",
    "mcp[cli]>=1.25,<2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/claude_remember_me"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
